<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Magic Tower</string>
    <string name="start">Your adventure begins...</string>
    <string name="version">prototype 1.0</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="main_screen_text_color">#907D50</string>
    <string name="title">MAGIC TOWER</string>
    <string name="defaultButt">Normal Buttons</string>
    <string name="bigButt">Big Buttons</string>
    <string name="devMode">DEV MODE</string>
    <string name="musicOn">Play all sounds</string>
    <string name="musicOff">Mute all sounds</string>

</resources>
