<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    tools:context="com.comp380.towergame.OptionsActivity" >
     
    <CheckBox android:id="@+id/checkbox_defaultButt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultButt"
        android:textColor="#907D50"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="400dp"
        android:textSize="40sp"
        android:onClick="onCheckboxClicked"/>
    
    <CheckBox android:id="@+id/checkbox_old"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bigButt"
        android:textColor="#907D50"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="400dp"
        android:textSize="40sp"
        android:onClick="onCheckboxClicked"/>
    
    <CheckBox android:id="@+id/checkbox_musicPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/musicOn"
        android:textColor="#907D50"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="400dp"
        android:textSize="40sp"
        android:onClick="onCheckboxClicked"/>
    
    <CheckBox android:id="@+id/checkbox_musicStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/musicOff"
        android:textColor="#907D50"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="400dp"
        android:textSize="40sp"
        android:onClick="onCheckboxClicked"/>
    
    <CheckBox android:id="@+id/checkbox_devButt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devMode"
        android:textColor="#907D50"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="400dp"
        android:textSize="40sp"
        android:onClick="onCheckboxClicked"/> 
        
    <Button
        android:id="@+id/button_playGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PLAY"
        android:textColor="#907D50"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="400dp"
        android:textSize="40sp"
        android:onClick="launchGame"/>
    
    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"      
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        android:text="@string/version"
        android:textSize="20dp" />

</LinearLayout>